# wx.ai

./: README.md  go.sh  pyproject.toml
DOCS/: packaging.md
src/wxai_helper_package/: wxai_helper_module.py
