[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wxai_helper_package"]

[project]
name = "wxai_helper_project"
version = "0.0.2"
authors = [
  { name="Robert Kleniewski" },
]
description = "watsonx.ai helper"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/kleniu/wx.ai"
Issues = "https://github.com/kleniu/wx.ai/issues"